# omit

./: .eslintrc.js  .gitignore  .gitmodules  .pnp.cjs  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: config.md
init/: Init.vue  index.html  init.ts
src/: App.vue  main.ts  style.css
src-tauri/: .gitignore  Cargo.toml  session.json  tauri.conf.json
src-tauri/repos/: _shortcuts.json
src-tauri/src/: action.rs  command.rs  common.rs  config.rs  data_source.rs  database.rs  error.rs  main.rs  repository.rs  session.rs  setting.rs  shell.rs  shortcut.rs  snapshot.rs  ssh.rs  ssh_cmd.rs  terminal.rs  util.rs
src-tauri/src/config/: omit_session.rs
src-tauri/src/terminal/: window.rs  window_backup.rs
src/components/Command/: CommandAddProcess.vue  CommandCreatePanel.vue  CommandSearchBar.vue
src/components/Init/: StorePath.vue
src/components/Session/: OmitSession.vue  OmitSessionForm.vue  OmitSessionItem.vue
src/components/Shortcut/: ShortcutBar.vue  ShortcutManagePanel.vue  ShortcutSavePanel.vue
src/components/Snapshot/: SnapOptionDrawer.vue  SnapParamDrawer.vue  SnapshotCreatePanel.vue  SnapshotExhibitCard.vue  SnapshotMorePanel.vue  SnapshotPanel.vue  SnapshotSavePanel.vue
src/lib/: BtnShow.ts  CmdOption.ts  CmdParam.ts  Command.ts  OmitSession.ts  OptionType.ts  Repo.ts  SSInfo.ts  Shortcut.ts  SnapOption.ts  SnapParam.ts  Snapshot.ts  SnapshotExhibitBtn.ts  Term.ts  Util.ts  ValueType.ts  setting.ts
src/router/: CmdRoute.ts  TermRoute.ts  index.ts
src/store/: command.ts  config.ts  footer_switch.ts  i18n.ts  panel_switch.ts  repository.ts  session.ts  setting.ts  shortcut.ts  snapshot.ts  terminal.ts
src/views/: CommandCreateView.vue  CommandManageView.vue  FooterBar.vue  HeadBar.vue  InitView.vue  ManageCommand.vue  ManageSession.vue  SH.vue  SnapshotCreateView.vue  SnapshotManageView.vue  Terminal.vue  TerminalWorkView.vue  Title.vue  VTerminal.vue  Welcome.vue
