[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.4", features = ["api-all"] }
ssh2 = "0.9.3"
crossbeam = "0.8"
mio = "0.7"
uuid = "0.8"
conpty = "0.3.0"
# winpty-rs = "0.3"
tauri-plugin-vibrancy = { git = "https://github.com/tauri-apps/tauri-plugin-vibrancy", features = ["tauri-impl"] } # or "tao-impl" for TAO projects.
simplelog = "^0.11.2"
log = "0.4"
rusqlite = { version = "0.27.0", features = ["bundled"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

# OPEN Release Debug
# https://github.com/tauri-apps/tauri/discussions/3059
[profile.release.package.wry]
debug = true
debug-assertions = true
