[package]
name = "omit"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "omit"
edition = "2021"
rust-version = "1.69"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# error
thiserror = "1.0"
# log
log = "^0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

async-trait = "0.1.68"
tauri = { version = "1.1.1", features = ["api-all"] }
russh = { version = "0.37.1" }
russh-keys = { version = "0.37.1" }
futures = "0.3"
anyhow = "1.0"
crossbeam= "0.8.2"
tokio="1.21.2"
uuid = "1.0.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]


[dev-dependencies]
anyhow = "1.0"
